[maven-release-plugin] prepare release kuali-common-20
git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@2710 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -18,7 +18,7 @@
   </parent>
   <groupId>org.kuali</groupId>
   <artifactId>kuali-common</artifactId>
-  <version>20-SNAPSHOT</version>
+  <version>20</version>
   <packaging>pom</packaging>
   <name>Kuali Common</name>
 
@@ -91,9 +91,9 @@
     </repository>
   </repositories>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/common</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/common</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/pom/trunk/common</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-common-20</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/tags/kuali-common-20</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/tags/kuali-common-20</url>
   </scm>
 
   <profiles>
