--- a/common/pom.xml
+++ b/common/pom.xml
@@ -98,6 +98,47 @@
 
   <profiles>
     <profile>
+      <id>commit</id>
+      <properties>
+        <scm.message>Automated SCM commit</scm.message>
+        <scm.phase>process-resources</scm.phase>
+      </properties>
+
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>org.kuali.maven.plugins</groupId>
+              <artifactId>maven-scm-plugin</artifactId>
+              <version>1.6</version>
+              <configuration>
+                <message>${scm.message}</message>
+              </configuration>
+              <executions>
+                <execution>
+                  <id>commit</id>
+                  <phase>${scm.phase}</phase>
+                  <goals>
+                    <goal>checkin</goal>
+                  </goals>
+                  <configuration>
+                    <includes>**/*</includes>
+                  </configuration>
+                </execution>
+              </executions>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+        <plugins>
+          <plugin>
+            <groupId>org.kuali.maven.plugins</groupId>
+            <artifactId>maven-scm-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+
+    </profile>
+    <profile>
       <id>license</id>
       <properties>
         <maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
