git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/pom@2723 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -111,6 +111,7 @@
               <artifactId>maven-scm-plugin</artifactId>
               <version>1.6</version>
               <configuration>
+                <basedir>${project.basedir}</basedir>
                 <message>${scm.message}</message>
               </configuration>
             </plugin>
