--- a/common/pom.xml
+++ b/common/pom.xml
@@ -132,7 +132,7 @@
             <plugin>
               <groupId>org.kuali.maven.plugins</groupId>
               <artifactId>maven-scm-plugin</artifactId>
-              <version>1.7-SNAPSHOT</version>
+              <version>1.6</version>
               <configuration>
                 <basedir>${project.basedir}</basedir>
                 <message>Automated license header update</message>
