--- a/common/pom.xml
+++ b/common/pom.xml
@@ -75,7 +75,7 @@
 
     <!-- -->
     <kuali.testjar.phase>package</kuali.testjar.phase>
-    <kuali.cm.tools.version>1.5</kuali.cm.tools.version>
+    <kuali.cm.tools.version>1.6</kuali.cm.tools.version>
   </properties>
   <repositories>
     <repository>
@@ -125,7 +125,7 @@
                 <dependency>
                   <groupId>org.kuali.cm</groupId>
                   <artifactId>cm-tools</artifactId>
-                  <version>1.6</version>
+                  <version>${kuali.cm.tools.version}</version>
                 </dependency>
               </dependencies>
             </plugin>
