--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <parent>
     <groupId>org.kuali</groupId>
     <artifactId>kuali-common</artifactId>
-    <version>15</version>
+    <version>21</version>
   </parent>
   <groupId>org.kuali.db.impex</groupId>
   <artifactId>impex</artifactId>
-  <version>1.0.23</version>
+  <version>1.0.23a-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Impex</name>
   <description />
@@ -62,8 +62,8 @@
     </dependency>
   </dependencies>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/impex-1.0.23</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/impex-1.0.23</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/tags/impex-1.0.23</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/branches/impex-1.0.23</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/branches/impex-1.0.23</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/branches/impex-1.0.23</url>
   </scm>
 </project>
