git-svn-id: https://svn.kuali.org/repos/foundation/sandbox/rice-2.0-db@2768 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/impex/pom.xml
+++ b/impex/pom.xml
@@ -261,7 +261,7 @@
         <plugin>
           <groupId>org.kuali.maven.plugins</groupId>
           <artifactId>maven-impex-plugin</artifactId>
-          <version>1.0.24</version>
+          <version>1.0.25-SNAPSHOT</version>
           <dependencies>
             <dependency>
               <groupId>mysql</groupId>
