Update version to 1.0.25-SNAPSHOT
git-svn-id: https://svn.kuali.org/repos/foundation/branches/impex-1.0.23@2777 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/jdbc-support/pom.xml
+++ b/jdbc-support/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.kuali.db.impex</groupId>
     <artifactId>impex</artifactId>
-    <version>1.0.23a-SNAPSHOT</version>
+    <version>1.0.25-SNAPSHOT</version>
   </parent>
   <artifactId>jdbc-support</artifactId>
   <name>JDBC Support Utilities</name>
