--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   </parent>
   <groupId>org.kuali.db.impex</groupId>
   <artifactId>impex</artifactId>
-  <version>1.0.25-SNAPSHOT</version>
+  <version>1.0.25</version>
   <packaging>pom</packaging>
   <name>Impex</name>
   <description />
@@ -62,8 +62,8 @@
     </dependency>
   </dependencies>
   <scm>
-    <connection>scm:svn:http://svn.kuali.org/repos/foundation/branches/impex-1.0</connection>
-    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/branches/impex-1.0</developerConnection>
-    <url>http://svn.kuali.org/repos/foundation/branches/impex-1.0</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/tags/impex-1.0.25</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/tags/impex-1.0.25</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/tags/impex-1.0.25</url>
   </scm>
 </project>
