--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <!--
-  Copyright 2009 The Kuali Foundation Licensed under the Educational Community
-  License, Version 2.0 (the "License"); you may not use this file except in
-  compliance with the License. You may obtain a copy of the License at
-  http://www.osedu.org/licenses/ECL-2.0 Unless required by applicable law or
-  agreed to in writing, software distributed under the License is distributed
-  on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
-  express or implied. See the License for the specific language governing
-  permissions and limitations under the License.
+
+    Copyright 2004-2011 The Kuali Foundation
+
+    Licensed under the Educational Community License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+    http://www.opensource.org/licenses/ecl2.php
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.kuali</groupId>
   <artifactId>kuali</artifactId>
@@ -49,18 +56,19 @@
   </developers>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    
+
     <!-- Declared as properties so they can be shared between the compiler and javadoc plugins -->
     <kuali.compile.source>1.6</kuali.compile.source>
     <kuali.compile.target>1.6</kuali.compile.target>
 
-    <!-- 
-      Declared here as a property because version inheritance is not working correctly with the 
+    <!--
+      Declared here as a property because version inheritance is not working correctly with the
       configuration for the 3.0-beta-4 version of the site plugin
-     -->
+    -->
     <kuali.javadoc.plugin.version>2.8</kuali.javadoc.plugin.version>
 
-    <!-- This profile provides basic quality control for official Kuali artifacts (GPG signature, attached sources/javadocs etc.)-->
+    <!-- This profile provides basic quality control for official Kuali artifacts (GPG signature, attached sources/javadocs 
+      etc.) -->
     <kuali.release.profiles>kuali-release</kuali.release.profiles>
     <!-- This is "false" because their profile forks the maven process when attaching sources, we want "jar-no-fork" -->
     <kuali.release.use.maven.profile>false</kuali.release.use.maven.profile>
@@ -83,11 +91,11 @@
     <kuali.site.hostname>site.kuali.org</kuali.site.hostname>
     <kuali.site.server.id>kuali.site</kuali.site.server.id>
 
-    <!-- 
+    <!--
       Setting this to true causes Maven to try and contact any url's listed for every dependency in the project(s).
-      Typically, quite a few of these urls are out of date, which makes the request eventually time out.  This causes basic
-      report generation to take a very long time  
-     -->
+      Typically, quite a few of these urls are out of date, which makes the request eventually time out. This causes basic
+      report generation to take a very long time
+    -->
     <kuali.reporting.dependency.locations>false</kuali.reporting.dependency.locations>
 
     <!-- These are the Kuali repository settings for an official release -->
@@ -99,6 +107,7 @@
     <kuali.repository.snapshot.id>kuali.snapshot</kuali.repository.snapshot.id>
     <kuali.repository.snapshot.name>Kuali Snapshot Repository</kuali.repository.snapshot.name>
     <kuali.repository.snapshot.url>s3://maven.kuali.org/snapshot</kuali.repository.snapshot.url>
+    <kuali.cm.tools.version>1.6</kuali.cm.tools.version>
   </properties>
   <repositories>
     <repository>
@@ -385,6 +394,111 @@
   </build>
   <profiles>
     <profile>
+      <id>license</id>
+      <properties>
+        <maven.build.timestamp.format>yyyy</maven.build.timestamp.format>
+        <license.format.phase>process-sources</license.format.phase>
+        <license.check.phase>verify</license.check.phase>
+        <license.status.phase>verify</license.status.phase>
+        <license.commit.phase>install</license.commit.phase>
+      </properties>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <groupId>com.mycila.maven-license-plugin</groupId>
+              <artifactId>maven-license-plugin</artifactId>
+              <version>1.9.0</version>
+              <configuration>
+                <encoding>${project.build.sourceEncoding}</encoding>
+                <strictCheck>true</strictCheck>
+                <header>org/kuali/cm/license/ecl-2.0-header.txt</header>
+                <properties>
+                  <license.copyrightStartYear>${project.inceptionYear}</license.copyrightStartYear>
+                  <license.copyrightCurrentYear>${maven.build.timestamp}</license.copyrightCurrentYear>
+                </properties>
+              </configuration>
+              <dependencies>
+                <dependency>
+                  <groupId>org.kuali.cm</groupId>
+                  <artifactId>cm-tools</artifactId>
+                  <version>${kuali.cm.tools.version}</version>
+                </dependency>
+              </dependencies>
+            </plugin>
+            <plugin>
+              <groupId>org.kuali.maven.plugins</groupId>
+              <artifactId>maven-scm-plugin</artifactId>
+              <version>1.6</version>
+              <configuration>
+                <basedir>${project.basedir}</basedir>
+                <message>Automated license header update</message>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+        <plugins>
+          <plugin>
+            <groupId>com.mycila.maven-license-plugin</groupId>
+            <artifactId>maven-license-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>update-license-header</id>
+                <phase>${license.format.phase}</phase>
+                <goals>
+                  <goal>format</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>update-pom-headers</id>
+                <phase>${license.format.phase}</phase>
+                <goals>
+                  <goal>format</goal>
+                </goals>
+                <configuration>
+                  <includes>
+                    <include>**/pom.xml</include>
+                  </includes>
+                  <useDefaultExcludes>false</useDefaultExcludes>
+                  <excludes>
+                    <exclude>**/target/**</exclude>
+                  </excludes>
+                </configuration>
+              </execution>
+              <execution>
+                <id>verify-license-header</id>
+                <phase>${license.check.phase}</phase>
+                <goals>
+                  <goal>check</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+          <plugin>
+            <groupId>org.kuali.maven.plugins</groupId>
+            <artifactId>maven-scm-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>license-header-status</id>
+                <phase>${license.status.phase}</phase>
+                <goals>
+                  <goal>status</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>commit-license-header</id>
+                <phase>${license.commit.phase}</phase>
+                <goals>
+                  <goal>checkin</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
       <id>sonatype-oss-release</id>
       <properties>
         <kuali.nexus.sonatype.url>https://oss.sonatype.org</kuali.nexus.sonatype.url>
@@ -400,10 +514,10 @@
         <kuali.repository.release.url>${kuali.nexus.sonatype.url}/service/local/staging/deploy/maven2/
         </kuali.repository.release.url>
 
-        <!-- These are for reference only.  Not currently publishing snapshots to Sonatype's Nexus instance 
-        <kuali.repository.snapshot.id>sonatype-nexus-snapshots</kuali.repository.snapshot.id>
-        <kuali.repository.snapshot.name>Sonatype Nexus Snapshots</kuali.repository.snapshot.name>
-        <kuali.repository.snapshot.url>https://oss.sonatype.org/content/repositories/snapshots/</kuali.repository.snapshot.url>
+        <!-- These are for reference only. Not currently publishing snapshots to Sonatype's Nexus instance
+          <kuali.repository.snapshot.id>sonatype-nexus-snapshots</kuali.repository.snapshot.id>
+          <kuali.repository.snapshot.name>Sonatype Nexus Snapshots</kuali.repository.snapshot.name>
+          <kuali.repository.snapshot.url>https://oss.sonatype.org/content/repositories/snapshots/</kuali.repository.snapshot.url>
         -->
       </properties>
       <build>
