Revert to previous revision
git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@2801 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -16,11 +16,12 @@
     limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.kuali</groupId>
   <artifactId>kuali</artifactId>
-  <version>103</version>
+  <version>103-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>The Kuali Foundation</name>
   <description>
@@ -157,9 +158,9 @@
     </snapshotRepository>
   </distributionManagement>
   <scm>
-    <connection>scm:svn:https://test.kuali.org/svn/rice/tags/kuali-103</connection>
-    <developerConnection>scm:svn:https://test.kuali.org/svn/rice/tags/kuali-103</developerConnection>
-    <url>https://test.kuali.org/svn/rice/tags/kuali-103</url>
+    <connection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/parent</connection>
+    <developerConnection>scm:svn:http://svn.kuali.org/repos/foundation/pom/trunk/parent</developerConnection>
+    <url>http://svn.kuali.org/repos/foundation/pom/trunk/parent</url>
   </scm>
   <build>
     <extensions>
