--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -98,6 +98,13 @@
         <plugin>
           <artifactId>maven-antrun-plugin</artifactId>
           <version>${antrun.version}</version>
+          <dependencies>
+            <dependency>
+              <groupId>jsch</groupId>
+              <artifactId>jsch</artifactId>
+              <version>0.1.29</version>
+            </dependency>
+          </dependencies>
         </plugin>
       </plugins>
     </pluginManagement>
