--- a/deploy/pom.xml
+++ b/deploy/pom.xml
@@ -105,9 +105,9 @@
           </configuration>
           <dependencies>
             <dependency>
-              <groupId>jsch</groupId>
-              <artifactId>jsch</artifactId>
-              <version>0.1.29</version>
+              <groupId>org.apache.ant</groupId>
+              <artifactId>ant-jsch</artifactId>
+              <version>1.8.2</version>
             </dependency>
           </dependencies>
         </plugin>
