--- a/deploy/build.xml
+++ b/deploy/build.xml
@@ -28,6 +28,7 @@
   <target name="copyconfig" depends="copy-commonconfig,copy-appconfig,copy-envconfig" />
 
   <property name="config.home" value="/home/${tomcat.instance}/kuali/main/${deploy.environment}" />
+  <property name="ssh.verbose" value="false" />
 
   <target name="ssh-exec">
     <condition property="ssh.properties">
@@ -37,14 +38,21 @@
     </condition>
     <fail unless="ssh.properties">Missing ssh.command</fail>
     <sshexec command="${ssh.command}" username="root" host="${deploy.server}" keyfile="${deploy.auth}" trust="true"
-      verbose="true" failonerror="true" />
+      verbose="${ssh.verbose}" failonerror="true" />
   </target>
 
   <target name="stop" depends="check-basic-properties">
     <echo>Stopping ${tomcat.instance} on ${deploy.server}</echo>
     <property name="stop.command" value="su - ${tomcat.instance} /usr/local/tomcat/bin/forced-shutdown.sh" />
+    <!--
+      Don't fail the build if the stop command fails
+      If the deploy script gets interrupted along the way somewhere, catalina.pid may or may not
+      exist on the remote server. The stop command returns a failure code if it thinks
+      catalina.pid should be present but it is not. Generally speaking, if catalina.pid
+      is not present tomcat is not running, which means the build should not fail.
+    -->
     <sshexec command="${stop.command}" username="root" host="${deploy.server}" keyfile="${deploy.auth}" trust="true"
-      verbose="true" failonerror="true" />
+      verbose="${ssh.verbose}" failonerror="false" />
   </target>
   <target name="cleanjdbc" depends="check-basic-properties">
     <antcall target="removedir">
